--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "embla-carousel-react": "^8.6.0",
+    "firebase": "^11.10.0",
     "framer-motion": "^12.19.1",
     "next": "15.2.1",
     "next-redux-wrapper": "^8.1.0",
