--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "color-thief-browser": "^2.0.2",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.3",
