--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.10.0",
     "color-thief-browser": "^2.0.2",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.10.0",
