add animation phoenix

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "export": "next export"
   },
   "dependencies": {
+    "@react-three/drei": "^10.5.1",
+    "@react-three/fiber": "^9.2.0",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
     "color-thief-browser": "^2.0.2",
@@ -27,7 +29,8 @@
     "react-slick": "^0.30.3",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
-    "tailwind-scrollbar": "^4.0.2"
+    "tailwind-scrollbar": "^4.0.2",
+    "three": "^0.178.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
