--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.6",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.525.0",
     "next": "15.2.1",
     "next-redux-wrapper": "^8.1.0",
     "react": "^19.0.0",
