--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "tailwind-scrollbar": "^4.0.2",
