--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.6",
+    "i18next": "^25.3.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "next": "15.2.1",
     "next-redux-wrapper": "^8.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.6.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
