--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "leaflet": "^1.9.4",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.525.0",
     "next": "15.2.1",
     "next-redux-wrapper": "^8.1.0",
@@ -31,6 +32,7 @@
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
+    "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
