--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.10.0",
     "color-thief-browser": "^2.0.2",
     "embla-carousel-react": "^8.6.0",
+    "fast-average-color": "^9.5.0",
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.9",
     "i18next": "^25.3.2",
