--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.10",
     "tailwind-scrollbar": "^4.0.2",
     "three": "^0.178.0"
   },
