--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-redux-wrapper": "^8.1.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.6.1",
     "react-icons": "^5.5.0",
@@ -40,6 +41,7 @@
     "react-slick": "^0.30.3",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
+    "react-use": "^17.6.0",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.10",
